Fix CSS styling and layout issues in HW4.css
Corrected CSS properties and values for layout adjustments.

--- a/HW4.css
+++ b/HW4.css
@@ -252,28 +252,22 @@ td.outputdata {
     font-family: optima,san-serif;
     font-weight: normal;
     margin-right: 20px;
-    margin-top: 5px;
-    margin-bottom: 8px;
+    margin-bottom: 15px;
 }
 
 /*iframe styling*/ 
 .iframe-container {
-    positon: absolute
-    top: 21%;
-    right: -20px;
-    width: 25%;
-    height: 100;
-    overflow: hidden;
-    box-sizing: border-box;
+    display: block;
+    margin-top: 10px;
+    margin-right: 20px;
     text-align: right;
-    margin-right: 20px
-    Margin-top: 10px;
 }  
 
 .iframe-container iframe {
-    width: 95%;
-    height: 20px;
+    width: 260px;
+    height: 120px;
     border: 4px solid rgb(144, 196, 198);
+    border-radiu: 5px
 } 
 
 /* Cookie welcome message styling */
